--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -5,16 +5,13 @@
 #   - POSTGRES_DB
 #   - POSTGRES_PASSWORD
 
-FROM docker:stable-dind
+# FROM docker:stable-dinda
+FROM docker:dind
 WORKDIR /app
-ADD . .
-
+Add ./myapp .
 # git   npmの依存関係解決のため
 # bash  コンテナ内でBashシェルを起動するため    (only develop)
 # vim   コンテナ内でVimを利用するため          (only develop)
 # --no-cache = "--update add" + "rm -rf /var/cache/apk/*"
 RUN apk add --no-cache npm git bash vim && \
     npm install --no-progress
-
-#CMD node server.js
-
