--- a/react/hello/package.json
+++ b/react/hello/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@uiw/react-monacoeditor": "^2.2.2",
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-monaco-editor": "^0.41.2",
     "react-scripts": "4.0.1",
