--- a/react/hello/package.json
+++ b/react/hello/package.json
@@ -10,9 +10,12 @@
     "@uiw/react-monacoeditor": "^2.2.2",
     "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
+    "firebase": "^8.2.1",
+    "firebaseui": "^4.7.1",
     "react": "^17.0.1",
     "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-monaco-editor": "^0.41.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
